--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Egypt Retweet Network</title>
+    <title>Egyptian Revolution and Twitter</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -31,6 +31,13 @@
 
 	<div id="colorlib-page">
 		<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
+    <aside id="colorlib-aside" role="complementary" class="js-fullheight text-center">
+			<nav id="colorlib-main-menu" role="navigation">
+        <h2>Retweet Network</h2>
+        <h4>Dynamics of Twitter posts from Tahrir Square on the eve of Mubarak’s resignation (24-25 Feb 2011).</h4>
+			</nav>
+
+		</aside> <!-- END COLORLIB-ASIDE -->
 
 		<div id="colorlib-main">
 			<section class="ftco-section-2">
